NIFI-14051 Removed unnecessary generic type declarations (#9562)
Signed-off-by: David Handermann <exceptionfactory@apache.org>