@@ -42,12 +42,7 @@ public class CalculateParquetOffsetsTest {
     private static final Path PARQUET_PATH = Paths.get("src/test/resources/TestParquetReader.parquet");
     private static final Path NOT_PARQUET_PATH = Paths.get("src/test/resources/core-site.xml");
 
-    private static final Map<String, String> PRESERVED_ATTRIBUTES = new HashMap<String, String>() {
-        {
-            put("foo", "bar");
-            put("example", "value");
-        }
-    };
+    private static final Map<String, String> PRESERVED_ATTRIBUTES = Map.of("foo", "bar", "example", "value");
 
     private TestRunner runner;
 
@@ -65,11 +60,11 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "10");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals(PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "10");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals(PARQUET_PATH);
 
-        PRESERVED_ATTRIBUTES.forEach(results.get(0)::assertAttributeEquals);
+        PRESERVED_ATTRIBUTES.forEach(results.getFirst()::assertAttributeEquals);
     }
 
     @Test
@@ -99,9 +94,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "5");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals(PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "5");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals(PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "5");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "5");
@@ -119,9 +114,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "8");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals(PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "8");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals(PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "2");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "8");
@@ -133,7 +128,7 @@ public class CalculateParquetOffsetsTest {
     @Test
     public void testSubPartitioningWithCountAndOffset() throws Exception {
         runner.setProperty(PROP_RECORDS_PER_SPLIT, "3");
-        runner.enqueue(PARQUET_PATH, createAttributes(new HashMap<String, String>() {
+        runner.enqueue(PARQUET_PATH, createAttributes(new HashMap<>() {
             {
                 put(ParquetAttribute.RECORD_COUNT, "7");
                 put(ParquetAttribute.RECORD_OFFSET, "2");
@@ -144,9 +139,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
-        results.get(0).assertContentEquals(PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
+        results.getFirst().assertContentEquals(PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "5");
@@ -168,9 +163,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "2");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals(PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "2");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals(PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "1");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
@@ -188,9 +183,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "5");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "3");
-        results.get(0).assertContentEquals(PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "5");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "3");
+        results.getFirst().assertContentEquals(PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "2");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "8");
@@ -209,9 +204,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "8");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals("");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "8");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals("");
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "2");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "8");
@@ -247,9 +242,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals("");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals("");
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "1");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "3");
@@ -261,7 +256,7 @@ public class CalculateParquetOffsetsTest {
     @Test
     public void testEmptyInputWithOffsetAndCountAttributes() {
         runner.setProperty(PROP_RECORDS_PER_SPLIT, "3");
-        runner.enqueue("", createAttributes(new HashMap<String, String>() {
+        runner.enqueue("", createAttributes(new HashMap<>() {
             {
                 put(ParquetAttribute.RECORD_OFFSET, "2");
                 put(ParquetAttribute.RECORD_COUNT, "4");
@@ -272,9 +267,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
-        results.get(0).assertContentEquals("");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
+        results.getFirst().assertContentEquals("");
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "1");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "5");
@@ -310,9 +305,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
-        results.get(0).assertContentEquals(NOT_PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "0");
+        results.getFirst().assertContentEquals(NOT_PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "1");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "3");
@@ -324,7 +319,7 @@ public class CalculateParquetOffsetsTest {
     @Test
     public void testUnrecognizedInputWithOffsetAndCountAttributes() throws IOException {
         runner.setProperty(PROP_RECORDS_PER_SPLIT, "3");
-        runner.enqueue(NOT_PARQUET_PATH, createAttributes(new HashMap<String, String>() {
+        runner.enqueue(NOT_PARQUET_PATH, createAttributes(new HashMap<>() {
             {
                 put(ParquetAttribute.RECORD_OFFSET, "2");
                 put(ParquetAttribute.RECORD_COUNT, "4");
@@ -335,9 +330,9 @@ public class CalculateParquetOffsetsTest {
 
         final List<MockFlowFile> results = runner.getFlowFilesForRelationship(REL_SUCCESS);
 
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
-        results.get(0).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
-        results.get(0).assertContentEquals(NOT_PARQUET_PATH);
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "3");
+        results.getFirst().assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "2");
+        results.getFirst().assertContentEquals(NOT_PARQUET_PATH);
 
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_COUNT, "1");
         results.get(1).assertAttributeEquals(ParquetAttribute.RECORD_OFFSET, "5");
@@ -347,7 +342,7 @@ public class CalculateParquetOffsetsTest {
     }
 
     private HashMap<String, String> createAttributes(Map<String, String> additionalAttributes) {
-        return new HashMap<String, String>(PRESERVED_ATTRIBUTES) {{
+        return new HashMap<>(PRESERVED_ATTRIBUTES) {{
             putAll(additionalAttributes);
         }};
     }
