@@ -23,17 +23,17 @@ import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.HashMap;
 import java.util.Set;
 import java.util.HashSet;
 import java.util.List;
 import java.util.regex.Pattern;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -45,7 +45,7 @@ public class TestAttributesToCSV {
     private static final String OUTPUT_SEPARATOR = ",";
     private static final String OUTPUT_MIME_TYPE = "text/csv";
     private static final String SPLIT_REGEX = OUTPUT_SEPARATOR + "(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)";
-    private static final String newline = System.getProperty("line.separator");
+    private static final String newline = System.lineSeparator();
 
     @Test
     public void testAttrListNoCoreNullOffNewAttrToAttribute() {
@@ -59,13 +59,13 @@ public class TestAttributesToCSV {
         testRunner.enqueue(new byte[0]);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", "");
+                .getFirst().assertAttributeEquals("CSVData", "");
     }
 
     @Test
@@ -76,19 +76,19 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.INCLUDE_CORE_ATTRIBUTES, "false");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        //use only one attribute, which does not exists, as the list of attributes to convert to csv
+        //use only one attribute, which does not exist, as the list of attributes to convert to csv
         final String NON_PRESENT_ATTRIBUTE_KEY = "beach-type";
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, NON_PRESENT_ATTRIBUTE_KEY);
         testRunner.enqueue(new byte[0]);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", "");
+                .getFirst().assertAttributeEquals("CSVData", "");
     }
 
     @Test
@@ -103,13 +103,13 @@ public class TestAttributesToCSV {
         testRunner.enqueue(new byte[0]);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", ",");
+                .getFirst().assertAttributeEquals("CSVData", ",");
     }
 
     @Test
@@ -124,13 +124,13 @@ public class TestAttributesToCSV {
         testRunner.enqueue(new byte[0]);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", "null,null");
+                .getFirst().assertAttributeEquals("CSVData", "null,null");
     }
 
     @Test
@@ -143,13 +143,13 @@ public class TestAttributesToCSV {
         testRunner.enqueue(new byte[0]);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", "");
+                .getFirst().assertAttributeEquals("CSVData", "");
     }
 
     @Test
@@ -161,28 +161,25 @@ public class TestAttributesToCSV {
         testRunner.enqueue(new byte[0]);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", "");
+                .getFirst().assertAttributeEquals("CSVData", "");
     }
 
 
     @Test
-    public void testNoAttrListCoreNullOffToContent() throws IOException {
+    public void testNoAttrListCoreNullOffToContent() {
         final TestRunner testRunner = TestRunners.newTestRunner(new AttributesToCSV());
         testRunner.setProperty(AttributesToCSV.DESTINATION, OUTPUT_OVERWRITE_CONTENT);
         testRunner.setProperty(AttributesToCSV.INCLUDE_CORE_ATTRIBUTES, "true");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        final Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-        }};
+        final Map<String, String> attrs = Map.of("beach-name", "Malibu Beach", "beach-location", "California, US",
+            "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -192,13 +189,13 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertEquals(OUTPUT_MIME_TYPE, flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
         final byte[] contentData = testRunner.getContentAsByteArray(flowFile);
 
-        final String contentDataString = new String(contentData, "UTF-8");
+        final String contentDataString = new String(contentData, StandardCharsets.UTF_8);
 
         Set<String> contentValues = new HashSet<>(getStrings(contentDataString));
 
@@ -218,11 +215,8 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.INCLUDE_CORE_ATTRIBUTES, "true");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach", "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -232,7 +226,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -252,17 +246,14 @@ public class TestAttributesToCSV {
     }
 
     @Test
-    public void testNoAttrListNoCoreNullOffToContent() throws IOException {
+    public void testNoAttrListNoCoreNullOffToContent() {
         final TestRunner testRunner = TestRunners.newTestRunner(new AttributesToCSV());
         testRunner.setProperty(AttributesToCSV.DESTINATION, OUTPUT_OVERWRITE_CONTENT);
         testRunner.setProperty(AttributesToCSV.INCLUDE_CORE_ATTRIBUTES, "false");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach", "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -272,13 +263,13 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertEquals(OUTPUT_MIME_TYPE, flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
         final byte[] contentData = testRunner.getContentAsByteArray(flowFile);
 
-        final String contentDataString = new String(contentData, "UTF-8");
+        final String contentDataString = new String(contentData, StandardCharsets.UTF_8);
         Set<String> contentValues = new HashSet<>(getStrings(contentDataString));
 
         assertEquals(3, contentValues.size());
@@ -298,12 +289,9 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, "beach-name,beach-location,beach-endorsement");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVAttribute!");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach", "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVAttribute!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -313,7 +301,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -337,12 +325,10 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, "beach-name,beach-location,beach-endorsement");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach",
+                    "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -352,7 +338,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -379,12 +365,10 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, "beach-name,beach-location,beach-endorsement,uuid");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach",
+                    "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -394,7 +378,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -409,8 +393,8 @@ public class TestAttributesToCSV {
         assertTrue(CSVDataValues.contains("\"This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim\""));
 
 
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("filename")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("path")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("filename")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("path")));
         assertTrue(CSVDataValues.contains(flowFile.getAttribute("uuid")));
     }
 
@@ -422,13 +406,11 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, "${myAttribs}");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-            put("myAttribs", "beach-name,beach-location,beach-endorsement");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach",
+                    "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!",
+                    "myAttribs", "beach-name,beach-location,beach-endorsement");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -439,7 +421,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
         //Test flow file 0 with ATTRIBUTE_LIST populated from expression language
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -458,7 +440,7 @@ public class TestAttributesToCSV {
         assertTrue(CSVDataValues.contains(flowFile.getAttribute("uuid")));
 
         //Test flow file 1 with ATTRIBUTE_LIST populated from expression language containing commas (output should be he same)
-        flowFile = flowFilesForRelationship.get(0);
+        flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -487,13 +469,11 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
 
-        Map<String, String> attrsCommaInName = new HashMap<String, String>() {{
-            put("beach,name", "Malibu Beach");
-            put("beach,location", "California, US");
-            put("beach,endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-            put("myAttribs", "\"beach,name\",\"beach,location\",\"beach,endorsement\"");
-        }};
+        Map<String, String> attrsCommaInName = Map.of("beach,name", "Malibu Beach",
+                    "beach,location", "California, US",
+                    "beach,endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!",
+                    "myAttribs", "\"beach,name\",\"beach,location\",\"beach,endorsement\"");
 
         testRunner.enqueue(new byte[0], attrsCommaInName);
         testRunner.run();
@@ -504,7 +484,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
         //Test flow file 0 with ATTRIBUTE_LIST populated from expression language
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -523,7 +503,7 @@ public class TestAttributesToCSV {
         assertTrue(CSVDataValues.contains(flowFile.getAttribute("uuid")));
 
         //Test flow file 1 with ATTRIBUTE_LIST populated from expression language containing commas (output should be he same)
-        flowFile = flowFilesForRelationship.get(0);
+        flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -552,13 +532,11 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, "${myAttribs}");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-            put("myAttribs", "beach-name,beach-location,beach-endorsement");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach",
+                    "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!",
+                    "myAttribs", "beach-name,beach-location,beach-endorsement");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -568,7 +546,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -583,9 +561,9 @@ public class TestAttributesToCSV {
         assertTrue(CSVDataValues.contains("\"This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim\""));
 
 
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("filename")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("path")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("uuid")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("filename")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("path")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("uuid")));
     }
 
     @Test
@@ -596,13 +574,11 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_REGEX, "${myRegEx}");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-            put("myRegEx", "beach-.*");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach",
+                    "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!",
+                    "myRegEx", "beach-.*");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -612,7 +588,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -627,9 +603,9 @@ public class TestAttributesToCSV {
         assertTrue(CSVDataValues.contains("\"This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim\""));
 
 
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("filename")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("path")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("uuid")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("filename")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("path")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("uuid")));
     }
 
     @Test
@@ -641,15 +617,13 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_LIST, "moreInfo1,moreInfo2");
         testRunner.setProperty(AttributesToCSV.NULL_VALUE_FOR_EMPTY_STRING, "false");
 
-        Map<String, String> attrs = new HashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-            put("myRegEx", "beach-.*");
-            put("moreInfo1", "A+ Rating");
-            put("moreInfo2", "Avg Temp: 61f");
-        }};
+        Map<String, String> attrs = Map.of("beach-name", "Malibu Beach",
+                    "beach-location", "California, US",
+                    "beach-endorsement", "This is our family's favorite beach. We highly recommend it. \n\nThanks, Jim",
+                    "attribute-should-be-eliminated", "This should not be in CSVData!",
+                    "myRegEx", "beach-.*",
+                    "moreInfo1", "A+ Rating",
+                    "moreInfo2", "Avg Temp: 61f");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -659,7 +633,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
 
-        MockFlowFile flowFile = flowFilesForRelationship.get(0);
+        MockFlowFile flowFile = flowFilesForRelationship.getFirst();
 
         assertNull(flowFile.getAttribute(CoreAttributes.MIME_TYPE.key()));
 
@@ -675,9 +649,9 @@ public class TestAttributesToCSV {
         assertTrue(CSVDataValues.contains("A+ Rating"));
         assertTrue(CSVDataValues.contains("Avg Temp: 61f"));
 
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("filename")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("path")));
-        assertTrue(!CSVDataValues.contains(flowFile.getAttribute("uuid")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("filename")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("path")));
+        assertFalse(CSVDataValues.contains(flowFile.getAttribute("uuid")));
     }
 
 
@@ -690,30 +664,29 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.INCLUDE_SCHEMA, "true");
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_REGEX, "beach-.*");
 
-        Map<String, String> attrs = new LinkedHashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-        }};
+        Map<String, String> attrs = new LinkedHashMap<>();
+        attrs.put("beach-name", "Malibu Beach");
+        attrs.put("beach-location", "California, US");
+        attrs.put("attribute-should-be-eliminated", "This should not be in CSVData!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
 
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVData");
-        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0)
+        testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst()
                 .assertAttributeExists("CSVSchema");
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVData", "Malibu Beach,\"California, US\"");
+                .getFirst().assertAttributeEquals("CSVData", "Malibu Beach,\"California, US\"");
         testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS)
-                .get(0).assertAttributeEquals("CSVSchema", "beach-name,beach-location");
+                .getFirst().assertAttributeEquals("CSVSchema", "beach-name,beach-location");
     }
 
     @Test
-    public void testSchemaToContent() throws Exception {
+    public void testSchemaToContent() {
         final TestRunner testRunner = TestRunners.newTestRunner(new AttributesToCSV());
         //set the destination of the csv string to be an attribute
         testRunner.setProperty(AttributesToCSV.DESTINATION, OUTPUT_OVERWRITE_CONTENT);
@@ -722,11 +695,10 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.INCLUDE_SCHEMA, "true");
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_REGEX, "beach-.*");
 
-        Map<String, String> attrs = new LinkedHashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-        }};
+        Map<String, String> attrs = new LinkedHashMap<>();
+        attrs.put("beach-name", "Malibu Beach");
+        attrs.put("beach-location", "California, US");
+        attrs.put("attribute-should-be-eliminated", "This should not be in CSVData!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -734,13 +706,13 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst();
         flowFile.assertAttributeNotExists("CSVData");
         flowFile.assertAttributeNotExists("CSVSchema");
 
         final byte[] contentData = testRunner.getContentAsByteArray(flowFile);
 
-        final String contentDataString = new String(contentData, "UTF-8");
+        final String contentDataString = new String(contentData, StandardCharsets.UTF_8);
         assertEquals(contentDataString.split(newline)[0], "beach-name,beach-location");
         assertEquals(contentDataString.split(newline)[1], "Malibu Beach,\"California, US\"");
     }
@@ -755,11 +727,10 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.INCLUDE_SCHEMA, "true");
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_REGEX, "beach-.*");
 
-        Map<String, String> attrs = new LinkedHashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-        }};
+        Map<String, String> attrs = new LinkedHashMap<>();
+        attrs.put("beach-name", "Malibu Beach");
+        attrs.put("beach-location", "California, US");
+        attrs.put("attribute-should-be-eliminated", "This should not be in CSVData!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -767,7 +738,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst();
         flowFile.assertAttributeExists("CSVData");
         flowFile.assertAttributeExists("CSVSchema");
 
@@ -780,7 +751,7 @@ public class TestAttributesToCSV {
     }
 
     @Test
-    public void testSchemaWithCoreAttribuesToContent() throws Exception {
+    public void testSchemaWithCoreAttribuesToContent() {
         final TestRunner testRunner = TestRunners.newTestRunner(new AttributesToCSV());
         //set the destination of the csv string to be an attribute
         testRunner.setProperty(AttributesToCSV.DESTINATION, OUTPUT_OVERWRITE_CONTENT);
@@ -789,11 +760,10 @@ public class TestAttributesToCSV {
         testRunner.setProperty(AttributesToCSV.INCLUDE_SCHEMA, "true");
         testRunner.setProperty(AttributesToCSV.ATTRIBUTES_REGEX, "beach-.*");
 
-        Map<String, String> attrs = new LinkedHashMap<String, String>() {{
-            put("beach-name", "Malibu Beach");
-            put("beach-location", "California, US");
-            put("attribute-should-be-eliminated", "This should not be in CSVData!");
-        }};
+        Map<String, String> attrs = new LinkedHashMap<>();
+        attrs.put("beach-name", "Malibu Beach");
+        attrs.put("beach-location", "California, US");
+        attrs.put("attribute-should-be-eliminated", "This should not be in CSVData!");
 
         testRunner.enqueue(new byte[0], attrs);
         testRunner.run();
@@ -801,7 +771,7 @@ public class TestAttributesToCSV {
         testRunner.assertTransferCount(AttributesToCSV.REL_SUCCESS, 1);
         testRunner.assertTransferCount(AttributesToCSV.REL_FAILURE, 0);
 
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(AttributesToCSV.REL_SUCCESS).getFirst();
         flowFile.assertAttributeNotExists("CSVData");
         flowFile.assertAttributeNotExists("CSVSchema");
 
@@ -811,7 +781,7 @@ public class TestAttributesToCSV {
 
         final byte[] contentData = testRunner.getContentAsByteArray(flowFile);
 
-        final String contentDataString = new String(contentData, "UTF-8");
+        final String contentDataString = new String(contentData, StandardCharsets.UTF_8);
         assertEquals(contentDataString.split(newline)[0], "beach-name,beach-location,path,filename,uuid");
         assertEquals(contentDataString.split(newline)[1], "Malibu Beach,\"California, US\"," + path + "," + filename + "," + uuid);
     }
